--- a/source/index.html
+++ b/source/index.html
@@ -2,13 +2,146 @@
 <html class="page" lang="ru">
   <head>
     <meta charset="UTF-8">
-    <title>Название проекта</title>
+    <title>CAT ENERGY</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="styles/styles.css">
     <script src="scripts/index.js" defer></script>
   </head>
   <body class="page__body">
-    <header class="header">Шапка</header>
-    <p>Привет, мир!</p>
+    <header class="main-header">
+      <a class="main-header__logo-link" href="index.html">
+        <img class="main-header__logo-image" src="#" alt="Логотип Кэт Энерджи" width="33" height="38">
+        <img class="main-header__logo-text logo-text" src="#" alt="Кэт Энерджи" width="101" height="18">
+      </a>
+      <nav class="main-nav nav main-nav--open">
+        <button class="nav__toggle nav__toggle--close" type="button">
+          <span class="visually-hidden">Открыть меню</span>
+        </button>
+        <div class="nav__wrapper">
+          <ul class="nav__list">
+            <li class="nav__list-item">
+              <a class="main-nav__link nav__link main-nav__link--current" href="index.html">Главная</a>
+            </li>
+            <li class="nav__list-item">
+              <a class="main-nav__link nav__link" href="catalog.html">Каталог продукции</a>
+            </li>
+            <li class="nav__list-item">
+              <a class="main-nav__link nav__link" href="#">Подбор программы</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <main class="main-container">
+      <section class="hero">
+        <h1 class="hero__title">Функциональное питание для котов</h1>
+        <p class="hero__subtitle">Занялся собой? Займись котом!</p>
+        <img class="hero__image" src="#" alt="Продукт Кэт Энерджи" width="280" height="270">
+        <a class="button button-general" href="#">Подобрать программу</a>
+      </section>
+      <section class="catalog">
+        <h2 class="visually-hidden">Выбор каталога</h2>
+        <ul class="catalog-list">
+          <li class="catalog-list__item">
+              <p class="catalog-list__item-title">Похудение</p>
+              <p class="catalog-list__item-text">Ваш кот весит больше собаки и почти утратил способность
+                лазить по деревьям? Пора на диету! Cat Energy Slim поможет
+                вашему питомцу сбросить лишний вес.</p>
+              <a class="catalog-list__item-link" href="#">Каталог slim</a>
+          </li>
+          <li class="catalog-list__item">
+              <p class="catalog-list__item-title">Набор массы</p>
+              <p class="catalog-list__item-text">Заработать авторитет среди дворовых котов и даже собак?
+                Серия Cat Energy Pro поможет вашему коту нарастить
+                необходимые мышцы!</p>
+              <a class="catalog-list__item-link" href="#">Каталог pro</a>
+          </li>
+        </ul>
+      </section>
+      <section class="how-it-works">
+        <h2 class="how-it-works__title">Как это работает</h2>
+        <ul class="how-it-works__list">
+          <li class="how-it-works__item">
+            <p class="how-it-works__text">Функциональное питание содержит только полезные питательные вещества.</p>
+          </li>
+          <li class="how-it-works__item">
+            <p class="how-it-works__text">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
+          </li>
+          <li class="how-it-works__item">
+            <p class="how-it-works__text">Замените один-два приема обычной еды на наше функциональное питание.</p>
+          </li>
+          <li class="how-it-works__item">
+            <p class="how-it-works__text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+          </li>
+        </ul>
+      </section>
+      <section class="live-example">
+        <h2 class="live-example__title">Живой пример</h2>
+        <p class="live-example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой
+          обычный корм на Cat Energy Slim. Отличный результат
+          без изнуряющих тренировок! При этом он не менял своих
+          привычек и по-прежнему спит по 16 часов в день.</p>
+        <ul class="live-example__facts-list">
+          <li class="live-example__facts-item">
+            <fieldset class="live-example__facts-field">
+              <legend class="live-example__facts-legend">снижение веса</legend>
+              <span class="live-example__facts-text">5 КГ</span>
+            </fieldset>
+          </li>
+          <li class="live-example__facts-item">
+            <fieldset class="live-example__facts-field">
+              <legend class="live-example__facts-legend">затрачено времени</legend>
+              <span class="live-example__facts-text">60 ДНЕЙ</span>
+            </fieldset>
+          </li>
+        </ul>
+        <div class="live-example__cost-wrap">
+          <span class="live-example__cost-title">Затраты на питание:</span>
+          <span class="live-example__cost-price">15 000 РУБ.</span>
+        </div>
+        <div class="live-example__slider">
+          <img class="live-example__slider-image" src="#" alt="Полный котик" width="560" height="512">
+          <img class="live-example__slider-image" src="#" alt="Худой котик" width="560" height="512">
+          <div class="live-example__slider-range">
+            <div class="live-example__slider-bar"></div>
+              <button class="live-example__toggle" type="button"><span class="visually-hidden">Кнопка слайдера</span></button>
+          </div>
+        </div>
+      </section>
+      <section class="map">
+        <h2 class="visually-hidden">Адрес главного штаба кэт энерджи</h2>
+        <div class="map__card">
+          <p class="map__card-title">Приглашаем к сотрудничеству дилеров!</p>
+          <address class="map__card-adress">ул. Большая Конюшенная, д. 19/8</address>
+          <address class="map__card-town">Санкт-Петербург</address>
+        </div>
+        <img class="map-image" src="#" alt="Карта расположения главного штаба кэт энерджи" width="320" height="362">
+      </section>
+    </main>
+    <footer class="main-footer">
+      <a class="main-footer__logo-link" href="index.html" >
+        <img class="main-footer__logo-text logo-text" src="#" alt="Логотип Кэт Энерджи" width="128" height="24">
+      </a>
+      <ul class="main-footer__socials socials">
+        <li class="socials__item">
+          <a class="socials__link socials__link--vk" href="#">
+            <span class="visually-hidden">В контакте</span>
+          </a>
+        </li>
+        <li class="socials__item">
+          <a class="socials__link socials__link--youtube" href="#">
+            <span class="visually-hidden">Ютуб</span>
+          </a>
+        </li>
+        <li class="socials__item">
+          <a class="socials__link socials__link--telegram" href="#">
+            <span class="visually-hidden">Телеграм</span>
+          </a>
+        </li>
+      </ul>
+      <a class="main-footer__academy-logo" href="https://htmlacademy.ru/intensive/adaptive">
+        <span class="visually-hidden">HTML Academy</span>
+      </a>
+    </footer>
   </body>
 </html>
