--- a/source/catalog.html
+++ b/source/catalog.html
@@ -35,140 +35,154 @@
     </nav>
   </header>
   <main class="main-catalog">
-    <section class="catalog">
-      <h1 class="catalog__title">Каталог продукции</h1>
-      <ul class="catalog__list">
-        <li class="catalog__item">
-          <a class="catalog__image-link" href="#">
-            <picture>
+    <section class="products">
+      <h1 class="products__title">Каталог продукции</h1>
+      <ul class="products__list">
+        <li class="products__item">
+          <a class="products__image-link" href="#">
+            <div class="products__item-wrap">
+              <picture>
               <source width="161" height="172" type="image/png" media="(min-width: 768px)" srcset="images/product-chicken-500-tablet(desktop)@1x.png 1x, images/product-chicken-500-tablet(desktop)@2x.png 2x">
-              <img class="catalog__image" src="images/product-chicken-500-mobile@1x.png" srcset="images/product-chicken-500-mobile@2x.png 2x" alt="Cat Energy PRO 500 г" width="68" height="86">
+              <img class="products__image" src="images/product-chicken-500-mobile@1x.png" srcset="images/product-chicken-500-mobile@2x.png 2x" alt="Cat Energy PRO 500 г" width="68" height="86">
             </picture>
+            </div>
           </a>
-          <a class="catalog__title-link" href="#">Cat Energy PRO 500 г</a>
-            <dl class="catalog__item-details">
-              <dt class="catalog__item-details-name">Масса</dt>
-              <dd class="catalog__item-detail">500 г</dd>
-              <dt class="catalog__item-details-name">Вкус</dt>
-              <dd class="catalog__item-detail">Курица</dd>
-              <dt class="catalog__item-details-name">Цена</dt>
-              <dd class="catalog__item-detail">700 ₽</dd>
+          <a class="products__title-link" href="#">Cat Energy PRO 500 г</a>
+            <dl class="products__item-details">
+              <dt class="products__item-details-name">Масса</dt>
+              <dd class="products__item-detail">500 г</dd>
+              <dt class="products__item-details-name">Вкус</dt>
+              <dd class="products__item-detail">Курица</dd>
+              <dt class="products__item-details-name">Цена</dt>
+              <dd class="products__item-detail">700 ₽</dd>
             </dl>
           <a class="button button-general" href="#">Заказать</a>
         </li>
-        <li class="catalog__item">
-          <a class="catalog__image-link" href="#">
-            <picture>
+        <li class="products__item">
+          <a class="products__image-link" href="#">
+            <div class="products__item-wrap">
+              <picture>
               <source width="172" height="196" type="image/png" media="(min-width: 1440px)" srcset="images/product-chicken-1000-desktop@1x.png 1x, images/product-chicken-1000-desktop@2x.png 2x">
               <source width="168" height="206" type="image/png" media="(min-width: 768px)" srcset="images/product-chicken-1000-tablet@1x.png 1x, images/product-chicken-1000-tablet@2x.png 2x">
-              <img class="catalog__image" src="images/product-chicken-1000-mobile@1x.png" srcset="images/product-chicken-1000-mobile@2x.png 2x" alt="Cat Energy PRO 1000 г" width="84" height="100">
+              <img class="products__image" src="images/product-chicken-1000-mobile@1x.png" srcset="images/product-chicken-1000-mobile@2x.png 2x" alt="Cat Energy PRO 1000 г" width="84" height="100">
             </picture>
+            </div>
           </a>
-            <a class="catalog__title-link" href="#">Cat Energy PRO 1000 г</a>
-            <dl class="catalog__item-details">
-              <dt class="catalog__item-details-name">Масса</dt>
-              <dd class="catalog__item-detail">1000 г</dd>
-              <dt class="catalog__item-details-name">Вкус</dt>
-              <dd class="catalog__item-detail">Курица</dd>
-              <dt class="catalog__item-details-name">Цена</dt>
-              <dd class="catalog__item-detail">1000 ₽</dd>
+            <a class="products__title-link" href="#">Cat Energy PRO 1000 г</a>
+            <dl class="products__item-details">
+              <dt class="products__item-details-name">Масса</dt>
+              <dd class="products__item-detail">1000 г</dd>
+              <dt class="products__item-details-name">Вкус</dt>
+              <dd class="products__item-detail">Курица</dd>
+              <dt class="products__item-details-name">Цена</dt>
+              <dd class="products__item-detail">1000 ₽</dd>
             </dl>
             <a class="button button-general" href="#">Заказать</a>
         </li>
-        <li class="catalog__item">
-          <a class="catalog__image-link" href="#">
-            <picture>
+        <li class="products__item">
+          <a class="products__image-link" href="#">
+            <div class="products__item-wrap">
+              <picture>
               <source width="163" height="174" type="image/png" media="(min-width: 768px)" srcset="images/product-fish-500-tablet(desktop)@1x.png 1x, images/product-fish-500-tablet(desktop)@2x.png 2x">
-              <img class="catalog__image" src="images/product-fish-500-mobile@1x.png" srcset="images/product-fish-500-mobile@2x.png 2x" alt="Cat Energy PRO 500 г" width="68" height="78">
+              <img class="products__image" src="images/product-fish-500-mobile@1x.png" srcset="images/product-fish-500-mobile@2x.png 2x" alt="Cat Energy PRO 500 г" width="68" height="78">
             </picture>
+            </div>
           </a>
-            <a class="catalog__title-link" href="#">Cat Energy PRO 500 г</a>
-            <dl class="catalog__item-details">
-              <dt class="catalog__item-details-name">Масса</dt>
-              <dd class="catalog__item-detail">500 г</dd>
-              <dt class="catalog__item-details-name">Вкус</dt>
-              <dd class="catalog__item-detail">Рыба</dd>
-              <dt class="catalog__item-details-name">Цена</dt>
-              <dd class="catalog__item-detail">700 ₽</dd>
+            <a class="products__title-link" href="#">Cat Energy PRO 500 г</a>
+            <dl class="products__item-details">
+              <dt class="products__item-details-name">Масса</dt>
+              <dd class="products__item-detail">500 г</dd>
+              <dt class="products__item-details-name">Вкус</dt>
+              <dd class="products__item-detail">Рыба</dd>
+              <dt class="products__item-details-name">Цена</dt>
+              <dd class="products__item-detail">700 ₽</dd>
             </dl>
             <a class="button button-general" href="#">Заказать</a>
         </li>
-        <li class="catalog__item">
-          <a class="catalog__image-link" href="#">
-            <picture>
+        <li class="products__item">
+          <a class="products__image-link" href="#">
+            <div class="products__item-wrap">
+              <picture>
               <source width="168" height="200" type="image/png" media="(min-width: 768px)" srcset="images/product-fish-1000-tablet@1x.png 1x, images/product-fish-1000-tablet@2x.png 2x">
-              <img class="catalog__image" src="images/product-fish-1000-mobile@1x.png" srcset="images/product-fish-1000-mobile@2x.png 2x" alt="Cat Energy PRO 1000 г" width="84" height="100">
+              <img class="products__image" src="images/product-fish-1000-mobile@1x.png" srcset="images/product-fish-1000-mobile@2x.png 2x" alt="Cat Energy PRO 1000 г" width="84" height="100">
             </picture>
+            </div>
           </a>
-            <a class="catalog__title-link" href="#">Cat Energy PRO 1000 г</a>
-            <dl class="catalog__item-details">
-              <dt class="catalog__item-details-name">Масса</dt>
-              <dd class="catalog__item-detail">1000 г</dd>
-              <dt class="catalog__item-details-name">Вкус</dt>
-              <dd class="catalog__item-detail">Рыба</dd>
-              <dt class="catalog__item-details-name">Цена</dt>
-              <dd class="catalog__item-detail">1000 ₽</dd>
+            <a class="products__title-link" href="#">Cat Energy PRO 1000 г</a>
+            <dl class="products__item-details">
+              <dt class="products__item-details-name">Масса</dt>
+              <dd class="products__item-detail">1000 г</dd>
+              <dt class="products__item-details-name">Вкус</dt>
+              <dd class="products__item-detail">Рыба</dd>
+              <dt class="products__item-details-name">Цена</dt>
+              <dd class="products__item-detail">1000 ₽</dd>
             </dl>
             <a class="button button-general" href="#">Заказать</a>
         </li>
-        <li class="catalog__item">
-          <a class="catalog__image-link" href="#">
+        <li class="products__item">
+          <a class="products__image-link" href="#">
+            <div class="products__item-wrap">
             <picture>
               <source width="161" height="171" type="image/png" media="(min-width: 768px)" srcset="images/product-buckwheat-500-tablet(desktop)@1x.png 1x, images/product-buckwheat-500-tablet(desktop)@2x.png 2x">
-              <img class="catalog__image" src="images/product-buckwheat-500-mobile@1x.png"  srcset="images/product-buckwheat-500-mobile@2x.png 2x" alt="Cat Energy SLIM 500 г" width="68" height="78">
+              <img class="products__image" src="images/product-buckwheat-500-mobile@1x.png"  srcset="images/product-buckwheat-500-mobile@2x.png 2x" alt="Cat Energy SLIM 500 г" width="68" height="78">
             </picture>
+            </div>
           </a>
-            <a class="catalog__title-link" href="#">Cat Energy SLIM 500 г</a>
-            <dl class="catalog__item-details">
-              <dt class="catalog__item-details-name">Масса</dt>
-              <dd class="catalog__item-detail">500 г</dd>
-              <dt class="catalog__item-details-name">Вкус</dt>
-              <dd class="catalog__item-detail">Гречка</dd>
-              <dt class="catalog__item-details-name">Цена</dt>
-              <dd class="catalog__item-detail">400 ₽</dd>
+            <a class="products__title-link" href="#">Cat Energy SLIM 500 г</a>
+            <dl class="products__item-details">
+              <dt class="products__item-details-name">Масса</dt>
+              <dd class="products__item-detail">500 г</dd>
+              <dt class="products__item-details-name">Вкус</dt>
+              <dd class="products__item-detail">Гречка</dd>
+              <dt class="products__item-details-name">Цена</dt>
+              <dd class="products__item-detail">400 ₽</dd>
             </dl>
             <a class="button button-general" href="#">Заказать</a>
         </li>
-        <li class="catalog__item">
-          <a class="catalog__image-link" href="#">
-            <picture>
+        <li class="products__item">
+          <a class="products__image-link" href="#">
+            <div class="products__item-wrap">
+              <picture>
               <source width="172" height="196" type="image/png" media="(min-width: 1440px)" srcset="images/product-buckwheat-1000-desktop@1x.png 1x, images/product-buckwheat-1000-desktop@2x.png 2x">
               <source width="168" height="200" type="image/png" media="(min-width: 768px)" srcset="images/product-buckwheat-1000-tablet@1x.png 1x, images/product-buckwheat-1000-tablet@2x.png 2x">
-              <img class="catalog__image" src="images/product-buckwheat-1000-mobile@1x.png" srcset="images/product-buckwheat-1000-mobile@2x.png 2x" alt="Cat Energy SLIM 1000 г" width="84" height="100">
+              <img class="products__image" src="images/product-buckwheat-1000-mobile@1x.png" srcset="images/product-buckwheat-1000-mobile@2x.png 2x" alt="Cat Energy SLIM 1000 г" width="84" height="100">
             </picture>
+            </div>
           </a>
-            <a class="catalog__title-link" href="#">Cat Energy SLIM 500 г</a>
-            <dl class="catalog__item-details">
-              <dt class="catalog__item-details-name">Масса</dt>
-              <dd class="catalog__item-detail">1000 г</dd>
-              <dt class="catalog__item-details-name">Вкус</dt>
-              <dd class="catalog__item-detail">Гречка</dd>
-              <dt class="catalog__item-details-name">Цена</dt>
-              <dd class="catalog__item-detail">700 ₽</dd>
+            <a class="products__title-link" href="#">Cat Energy SLIM 500 г</a>
+            <dl class="products__item-details">
+              <dt class="products__item-details-name">Масса</dt>
+              <dd class="products__item-detail">1000 г</dd>
+              <dt class="products__item-details-name">Вкус</dt>
+              <dd class="products__item-detail">Гречка</dd>
+              <dt class="products__item-details-name">Цена</dt>
+              <dd class="products__item-detail">700 ₽</dd>
             </dl>
             <a class="button button-general" href="#">Заказать</a>
         </li>
-        <li class="catalog__item">
-          <a class="catalog__image-link" href="#">
-            <picture>
+        <li class="products__item">
+          <a class="products__image-link" href="#">
+            <div class="products__item-wrap">
+              <picture>
               <source width="163" height="174" type="image/png" media="(min-width: 768px)" srcset="images/product-rice-500-tablet(desktop)@1x.png 1x, images/product-rice-500-tablet(desktop)@2x.png 2x">
-              <img class="catalog__image" src="images/product-rice-500-mobile@1x.png" srcset="images/product-rice-500-mobile@2x.png 2x" alt="Cat Energy SLIM 500 г" width="72" height="84">
+              <img class="products__image" src="images/product-rice-500-mobile@1x.png" srcset="images/product-rice-500-mobile@2x.png 2x" alt="Cat Energy SLIM 500 г" width="72" height="84">
             </picture>
+            </div>
           </a>
-            <a class="catalog__title-link" href="#">Cat Energy SLIM 500 г</a>
-            <dl class="catalog__item-details">
-              <dt class="catalog__item-details-name">Масса</dt>
-              <dd class="catalog__item-detail">500 г</dd>
-              <dt class="catalog__item-details-name">Вкус</dt>
-              <dd class="catalog__item-detail">Рис</dd>
-              <dt class="catalog__item-details-name">Цена</dt>
-              <dd class="catalog__item-detail">500 ₽</dd>
+            <a class="products__title-link" href="#">Cat Energy SLIM 500 г</a>
+            <dl class="products__item-details">
+              <dt class="products__item-details-name">Масса</dt>
+              <dd class="products__item-detail">500 г</dd>
+              <dt class="products__item-details-name">Вкус</dt>
+              <dd class="products__item-detail">Рис</dd>
+              <dt class="products__item-details-name">Цена</dt>
+              <dd class="products__item-detail">500 ₽</dd>
             </dl>
           <a class="button button-general" href="#">Заказать</a>
         </li>
-        <li class="catalog__item">
-            <p class="catalog__item-more-title">Показать еще 100500 товаров</p>
-            <p class="catalog__item-more-text">На самом деле вкусов гораздо больше!</p>
+        <li class="products__item">
+            <p class="products__more-title">Показать еще 100500 товаров</p>
+            <p class="products__more-text">На самом деле вкусов гораздо больше!</p>
             <a class="button button-show-all" href="#">Показать все</a>
         </li>
       </ul>
@@ -178,7 +192,7 @@
       <div class="additional-products__wrapper">
         <ul class="additional-products__list">
           <li class="additional-products__item">
-            <p class="additional-products__title">Сахарозаменитель</p>
+            <p class="additional-products__item-title">Сахарозаменитель</p>
             <div class="additional-products__info">
               <span class="additional-products__name">1 упаковка (100 г)</span>
               <span class="additional-products__cost">200 ₽</span>
@@ -186,7 +200,7 @@
             <a class="button button-general" href="#">Заказать</a>
           </li>
           <li class="additional-products__item">
-            <p class="additional-products__title">Питьевая вода</p>
+            <p class="additional-products__item-title">Питьевая вода</p>
             <div class="additional-products__info">
               <span class="additional-products__name">5 литров</span>
               <span class="additional-products__cost">50 ₽</span>
@@ -194,7 +208,7 @@
             <a class="button button-general" href="#">Заказать</a>
           </li>
           <li class="additional-products__item">
-            <p class="additional-products__title">Молоко</p>
+            <p class="additional-products__item-title">Молоко</p>
             <div class="additional-products__info">
               <span class="additional-products__name">1 литр</span>
               <span class="additional-products__cost">100 ₽</span>
@@ -202,7 +216,7 @@
             <a class="button button-general" href="#">Заказать</a>
           </li>
           <li class="additional-products__item">
-            <p class="additional-products__title">Витамины</p>
+            <p class="additional-products__item-title">Витамины</p>
             <div class="additional-products__info">
               <span class="additional-products__name">1 упаковка (30 г)</span>
               <span class="additional-products__cost">300 ₽</span>
@@ -225,7 +239,7 @@
     </section>
     <section class="map">
       <h2 class="visually-hidden">Адрес главного штаба кэт энерджи</h2>
-      <div class="map__card">
+      <div class="map__card map__card--dark">
         <p class="map__card-title">Приглашаем к сотрудничеству дилеров!</p>
         <address class="map__card-adress">ул. Большая Конюшенная, д. 19/8</address>
         <address class="map__card-town">Санкт-Петербург</address>
@@ -258,7 +272,8 @@
         </a>
       </li>
     </ul>
-    <a class="main-footer__academy-logo" href="https://htmlacademy.ru/intensive/adaptive">
+    <a class="main-footer__academy-logo-link" href="https://htmlacademy.ru/intensive/adaptive">
+      <span class="main-footer__academy-logo-text">HTML Academy</span>
       <span class="visually-hidden">HTML Academy</span>
     </a>
   </footer>
