Добавлена векторная графика в index.html

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -16,7 +16,7 @@
       <img class="main-header__logo-text logo-text" src="#" alt="Кэт Энерджи" width="101" height="18">
     </a>
     <nav class="main-nav nav main-nav--open">
-      <button class="nav__toggle nav__toggle--close" type="button">
+      <button class="nav__toggle nav__toggle--open" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
       <div class="nav__wrapper">
