--- a/source/index.html
+++ b/source/index.html
@@ -14,8 +14,15 @@
   <body class="page__body">
     <header class="main-header">
       <a class="main-header__logo-link" href="index.html">
-        <img class="main-header__logo-image" src="#" alt="Логотип Кэт Энерджи" width="33" height="38">
-        <img class="main-header__logo-text logo-text" src="#" alt="Кэт Энерджи" width="101" height="18">
+        <picture>
+          <source media="(min-width: 1440px)" type="image/svg+xml" srcset="images/logo-cat-desktop.svg" width="70" height="60">
+          <source media="(min-width: 768px)" type="image/svg+xml" srcset="images/logo-cat-tablet.svg" width="60" height="50">
+          <img class="main-header__logo-image" src="images/logo-cat-mobile.svg" alt="Логотип Кэт Энерджи" width="33" height="38">
+        </picture>
+        <picture>
+          <source media="(min-width: 1440px)" type="image/svg+xml" srcset="images/logo-text.svg" width="118" height="21">
+          <img class="main-header__logo-text logo-text" src="images/logo-text.svg" alt="Кэт Энерджи" width="101" height="18">
+        </picture>
       </a>
       <nav class="main-nav nav main-nav--open">
         <button class="nav__toggle nav__toggle--close" type="button">
@@ -51,14 +58,20 @@
         <h2 class="visually-hidden">Выбор каталога</h2>
         <ul class="catalog__list">
           <li class="catalog__item">
+            <div class="catalog__item-wrap">
+              <div class="catalog__item-picture catalog__item-picture--slim"></div>
               <p class="catalog__item-title">Похудение</p>
+            </div>
               <p class="catalog__item-text">Ваш кот весит больше собаки и почти утратил способность
                 лазить по деревьям? Пора на диету! Cat Energy Slim поможет
                 вашему питомцу сбросить лишний вес.</p>
               <a class="catalog__item-link" href="#">Каталог slim</a>
           </li>
           <li class="catalog__item">
+            <div class="catalog__item-wrap">
+              <div class="catalog__item-picture catalog__item-picture--pro"></div>
               <p class="catalog__item-title">Набор массы</p>
+            </div>
               <p class="catalog__item-text">Заработать авторитет среди дворовых котов и даже собак?
                 Серия Cat Energy Pro поможет вашему коту нарастить
                 необходимые мышцы!</p>
@@ -70,15 +83,19 @@
         <h2 class="how-it-works__title">Как это работает</h2>
         <ul class="how-it-works__list">
           <li class="how-it-works__item">
+            <div class="how-it-works__picture how-it-works__picture--leaf"></div>
             <p class="how-it-works__text">Функциональное питание содержит только полезные питательные вещества.</p>
           </li>
           <li class="how-it-works__item">
+            <div class="how-it-works__picture how-it-works__picture--powder"></div>
             <p class="how-it-works__text">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
           </li>
           <li class="how-it-works__item">
+            <div class="how-it-works__picture how-it-works__picture--eat"></div>
             <p class="how-it-works__text">Замените один-два приема обычной еды на наше функциональное питание.</p>
           </li>
           <li class="how-it-works__item">
+            <div class="how-it-works__picture how-it-works__picture--clock"></div>
             <p class="how-it-works__text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
           </li>
         </ul>
@@ -138,7 +155,7 @@
     </main>
     <footer class="main-footer">
       <a class="main-footer__logo-link" href="index.html" >
-        <img class="main-footer__logo-text logo-text" src="#" alt="Логотип Кэт Энерджи" width="128" height="24">
+        <img class="main-footer__logo-text logo-text" src="images/logo-text.svg" alt="Логотип Кэт Энерджи" width="128" height="24">
       </a>
       <ul class="main-footer__socials socials">
         <li class="socials__item">
@@ -157,10 +174,12 @@
           </a>
         </li>
       </ul>
-      <a class="main-footer__academy-logo-link" href="https://htmlacademy.ru/intensive/adaptive">
+      <div class="main-footer__academy-logo-wrapper">
+        <a class="main-footer__academy-logo-text-link" href="https://htmlacademy.ru/intensive/adaptive">
         <span class="main-footer__academy-logo-text">HTML Academy</span>
-        <span class="visually-hidden">HTML Academy</span>
-      </a>
+        </a>
+      <a class="main-footer__academy-logo-picture-link" href="https://htmlacademy.ru/intensive/adaptive" alt="Ссылка на сайт html academy"></a>
+      </div>
     </footer>
   </body>
 </html>
