Исправляет ошибки в БЭМ

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -25,7 +25,7 @@
           <img class="main-header__logo-text logo-text" src="images/logo-text.svg" alt="Кэт Энерджи" width="101" height="18">
         </picture>
       </a>
-      <button class="nav__toggle nav__toggle--open" type="button">
+      <button class="menu-burger menu-burger--open" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
     </div>
