--- a/source/index.html
+++ b/source/index.html
@@ -27,7 +27,7 @@
             <img class="main-header__logo-text logo-text" src="images/logo-text.svg" alt="Кэт Энерджи" width="101" height="18">
           </picture>
         </a>
-        <button class="nav__toggle nav__toggle--close" type="button">
+        <button class="menu-burger menu-burger--close" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
       </div>
@@ -182,7 +182,9 @@
         <a class="main-footer__academy-logo-text-link" href="https://htmlacademy.ru/intensive/adaptive">
         <span class="main-footer__academy-logo-text">HTML Academy</span>
         </a>
-      <a class="main-footer__academy-logo-picture-link" href="https://htmlacademy.ru/intensive/adaptive" alt="Ссылка на сайт html academy"></a>
+      <a class="main-footer__academy-logo-picture-link" href="https://htmlacademy.ru/intensive/adaptive">
+        <span class="visually-hidden">Логотип HTML Academy</span>
+      </a>
       </div>
     </footer>
   </body>
